# gigaleverage

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
gigaleverage-app/: Cargo.toml  build.rs
gigaleverage-app/src/: main.rs
gigaleverage-app/ui/: App.slint  components.slint  main.slint  theme.slint  types.slint
gigaleverage-app/ui/screens/: ApiKeyInput.slint  IntroScreen.slint  LoadingScreen.slint  MainScreen.slint  SettingsScreen.slint
