[workspace]
members = ["gigaleverage-app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gigaleverage Team"]
license = "MIT"
description = "A modern app for time series data analysis and sentiment analysis"
repository = "https://github.com/Gigaleverage/gigaleverage"

[workspace.dependencies]
slint = "1.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
