[package]
name = "gigaleverage-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "gigaleverage"
path = "src/main.rs"

[dependencies]
slint = "1.6.0"
tokio = { workspace = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { workspace = true }
dirs = "5.0.1"
anyhow = "1.0.86"
thiserror = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[build-dependencies]
slint-build = "1.6.0"
